add quiz result and user attempts and post to firebase

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,10 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".ui.QuizActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_marginTop="20dp"
+        android:id="@+id/tvQuestionNumber"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:text="Pertanyaan 1"
+        android:textStyle="bold"
+        android:layout_marginVertical="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:background="@drawable/retro_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_centerHorizontal="true"
+            android:id="@+id/tvQuestion"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:text="Sebab begitu besar kasih Allah akan dunia ini, sehingga Ia telah mengaruniakan Anak-Nya yang tunggal, supaya setiap orang yang percaya kepada-Nya tidak binasa, melainkan beroleh hidup yang kekal."
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+    <GridLayout
+        android:layout_marginTop="20dp"
+        android:rowCount="2"
+        android:columnCount="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_margin="2dp"
+            android:background="@drawable/retro_button"
+            android:id="@+id/btnChoice1"
+            android:text="ABC"
+            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_margin="2dp"
+            android:background="@drawable/retro_button"
+            android:id="@+id/btnChoice2"
+            android:text="ABC"
+            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_margin="2dp"
+            android:background="@drawable/retro_button"
+            android:id="@+id/btnChoice3"
+            android:text="ABC"
+            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_margin="2dp"
+            android:background="@drawable/retro_button"
+            android:id="@+id/btnChoice4"
+            android:text="ABC"
+            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+    </GridLayout>
+
+    <TextView
+        android:id="@+id/tvNextQuestionCaption"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:visibility="invisible"
+        android:textColor="@color/green"
+        android:textStyle="bold"
+        android:text="Pertanyaan selanjutnya dalam (3) detik..."
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
