--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,7 +6,7 @@
     android:background="#F5F5F5">
 
     <LinearLayout
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -35,6 +35,7 @@
 
                 <TextView
                     android:id="@+id/tvName"
+                    android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nama Pengguna"
@@ -43,6 +44,7 @@
 
                 <TextView
                     android:id="@+id/tvLevel"
+                    android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Level 3 - 1500 XP"
@@ -56,58 +58,176 @@
             android:layout_height="wrap_content"
             android:columnCount="2"
             android:rowCount="3"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="26dp"
             android:layout_marginBottom="16dp">
 
-            <androidx.appcompat.widget.AppCompatButton
+            <RelativeLayout
+                android:background="@drawable/rounded_button"
+                android:orientation="vertical"
                 android:id="@+id/btnMulaiKuis"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:text="Mulai Kuis"
-                android:layout_margin="8dp" >
+                android:layout_margin="12dp" >
+                <LinearLayout
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:src="@drawable/ic_quiz"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="Mulai Kuis"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </RelativeLayout>
 
-            </androidx.appcompat.widget.AppCompatButton>
-
-            <androidx.appcompat.widget.AppCompatButton
+            <RelativeLayout
+                android:background="@drawable/rounded_button"
+                android:orientation="vertical"
                 android:id="@+id/btnStatistik"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:text="Statistik"
-                android:layout_margin="8dp" />
+                android:layout_margin="12dp" >
+                <LinearLayout
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:src="@drawable/ic_statistic"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="Statistik"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </RelativeLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
+            <RelativeLayout
+                android:background="@drawable/rounded_button"
+                android:orientation="vertical"
                 android:id="@+id/btnLeaderboard"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:text="Leaderboard"
-                android:layout_margin="8dp" />
+                android:layout_margin="12dp" >
+                <LinearLayout
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:src="@drawable/ic_leaderboard"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="Leaderboard"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </RelativeLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
+            <RelativeLayout
+                android:background="@drawable/rounded_button"
+                android:orientation="vertical"
                 android:id="@+id/btnBelajar"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:text="Belajar"
-                android:layout_margin="8dp" />
+                android:layout_margin="12dp" >
+                <LinearLayout
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:src="@drawable/ic_learn"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="Belajar"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </RelativeLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
+            <RelativeLayout
+                android:background="@drawable/rounded_button"
+                android:orientation="vertical"
                 android:id="@+id/btnDailyQuiz"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:text="Daily Quiz"
-                android:layout_margin="8dp" />
+                android:layout_margin="12dp" >
+                <LinearLayout
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:src="@drawable/ic_daily"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="Quiz Harian"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </RelativeLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
+            <RelativeLayout
+                android:background="@drawable/rounded_button"
+                android:orientation="vertical"
                 android:id="@+id/btnPengaturan"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_columnWeight="1"
-                android:text="Pengaturan"
-                android:layout_margin="8dp" />
+                android:layout_margin="12dp" >
+                <LinearLayout
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:src="@drawable/ic_setting"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="Pengaturan"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </RelativeLayout>
         </GridLayout>
     </LinearLayout>
 </ScrollView>
