--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -9,75 +9,146 @@
     android:padding="16dp"
     tools:context=".ui.QuizActivity">
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/tvQuestionNumber"
-        android:textSize="20dp"
+    <LinearLayout
+        android:id="@+id/linearLoading"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
+        android:orientation="vertical"
+        android:background="@color/white"
+        android:padding="24dp">
+
+        <!-- Spinning progress bar -->
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:layout_marginBottom="24dp" />
+
+        <!-- Loading text -->
+        <TextView
+            android:id="@+id/loadingText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Menyiapkan data Quiz..."
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif-medium" />
+    </LinearLayout>
+
+
+    <TextView
+        android:layout_marginTop="30dp"
+        android:id="@+id/tvQuestionNumber"
+        android:textSize="30dp"
+        android:gravity="center"
+        android:textColor="@color/black"
         android:text="Pertanyaan 1"
-        android:textStyle="bold"
-        android:layout_marginVertical="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
     <RelativeLayout
-        android:background="@drawable/retro_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.material.button.MaterialButton
+            android:layout_centerHorizontal="true"
+            android:id="@+id/tvCountdownTimer"
+            android:gravity="center"
+            app:cornerRadius="16dp"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:backgroundTint="@color/red"
+            android:text="Sisa Waktu : "
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:layout_centerHorizontal="true"
             android:id="@+id/tvQuestion"
-            android:textSize="20dp"
+            android:textSize="25dp"
             android:gravity="center"
+            android:textColor="@color/black"
             android:text="Sebab begitu besar kasih Allah akan dunia ini, sehingga Ia telah mengaruniakan Anak-Nya yang tunggal, supaya setiap orang yang percaya kepada-Nya tidak binasa, melainkan beroleh hidup yang kekal."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </RelativeLayout>
-    <GridLayout
-        android:layout_marginTop="20dp"
+    <LinearLayout
+        android:layout_marginTop="40dp"
         android:rowCount="2"
         android:columnCount="2"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_margin="2dp"
-            android:background="@drawable/retro_button"
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnChoice1"
-            android:text="ABC"
-            android:layout_columnWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_margin="2dp"
-            android:background="@drawable/retro_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MATIUS 28 : 19"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            app:cornerRadius="16dp"
+            app:strokeColor="@color/black"
+            app:strokeWidth="1dp"
+            android:textAllCaps="false"
+            android:layout_marginVertical="6dp"
+            android:paddingVertical="16dp"/>
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnChoice2"
-            android:text="ABC"
-            android:layout_columnWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_margin="2dp"
-            android:background="@drawable/retro_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MATIUS 28 : 19"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            app:cornerRadius="16dp"
+            app:strokeColor="@color/black"
+            app:strokeWidth="1dp"
+            android:textAllCaps="false"
+            android:layout_marginVertical="6dp"
+            android:paddingVertical="16dp"/>
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnChoice3"
-            android:text="ABC"
-            android:layout_columnWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_margin="2dp"
-            android:background="@drawable/retro_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MATIUS 28 : 19"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            app:cornerRadius="16dp"
+            app:strokeColor="@color/black"
+            app:strokeWidth="1dp"
+            android:textAllCaps="false"
+            android:layout_marginVertical="6dp"
+            android:paddingVertical="16dp"/>
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnChoice4"
-            android:text="ABC"
-            android:layout_columnWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-    </GridLayout>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MATIUS 28 : 19"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            app:cornerRadius="16dp"
+            app:strokeColor="@color/black"
+            app:strokeWidth="1dp"
+            android:textAllCaps="false"
+            android:layout_marginVertical="6dp"
+            android:paddingVertical="16dp"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvNextQuestionCaption"
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:visibility="invisible"
-        android:textColor="@color/green"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:text="Pertanyaan selanjutnya dalam (3) detik..."
         android:layout_width="match_parent"
