--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ui.QuizActivity">
+    tools:context=".ui.QuizMultipleChoiceActivity">
 
     <LinearLayout
         android:id="@+id/linearLoading"
@@ -67,6 +67,51 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:background="@drawable/rounded_button_green"
+            android:paddingHorizontal="7dp"
+            android:id="@+id/llTotalCorrect"
+            android:layout_marginHorizontal="2dp"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_margin="2dp"
+                android:id="@+id/tvTotalCorrectAnswer"
+                android:textStyle="bold"
+                android:text="0"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <TextView
+            android:text=" - "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:background="@drawable/rounded_button_red"
+            android:paddingHorizontal="7dp"
+            android:layout_toRightOf="@+id/llTotalCorrect"
+            android:layout_marginHorizontal="2dp"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_margin="2dp"
+                android:id="@+id/tvTotalIncorrectAnswer"
+                android:textStyle="bold"
+                android:text="0"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_marginTop="30dp"
