--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -19,21 +19,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.google.android.material.button.MaterialButton
+            android:layout_marginHorizontal="2dp"
             android:layout_centerHorizontal="true"
             android:id="@+id/tvQuizCategory"
             android:gravity="center"
             app:cornerRadius="16dp"
             android:textStyle="bold"
-            android:backgroundTint="@color/gray500"
-            android:text="Ayat Penting"
-            android:textColor="@color/black"
+            android:backgroundTint="@color/accentGreen"
+            android:text="Pilihan Ganda"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </RelativeLayout>
+        <com.google.android.material.button.MaterialButton
+            android:layout_marginHorizontal="2dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/tvQuizTopic"
+            android:gravity="center"
+            app:cornerRadius="16dp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/accentOrange"
+            android:text="Ayat Penting"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <TextView
         android:layout_marginTop="50dp"
         android:gravity="center"
@@ -52,7 +70,26 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <RelativeLayout
+        android:layout_marginTop="-30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.material.button.MaterialButton
+            android:layout_centerHorizontal="true"
+            android:id="@+id/tvTimeNeeded"
+            android:gravity="center"
+            app:cornerRadius="16dp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/green"
+            android:text="30 Detik"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
     <LinearLayout
+        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="30dp"
         android:background="@drawable/rounded_button"
         android:paddingHorizontal="30dp"
@@ -102,7 +139,7 @@
                 android:padding="10dp"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:text="1 Salah"
+                android:text="1 Pertanyaan"
                 android:textSize="20dp"
                 android:textColor="@color/black"
                 android:layout_width="match_parent"
