--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,8 +53,18 @@
         android:id="@+id/btnRegister"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/retro_button"
         android:text="@string/label_button_register"
+        android:textColor="@color/black"
+        android:typeface="monospace" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnLoginAsGuest"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/retro_button"
+        android:text="@string/label_button_login_as_guest"
         android:textColor="@color/black"
         android:typeface="monospace" />
 
